# news-recap

./: .coveragerc  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CLAUDE.md  README.md  activate.sh  alembic.ini  data.json  index.html  objects.inv  plan_agent_contract_debug.md  plan_db_centric.md  plan_object_store.md  plan_prefect_migration.md  pyproject.toml  pytest.ini  search.json  sitemap.xml  tasks.py
alembic/: env.py
automation/: index.html
cli/: index.html
dev/: agent-setup.md
docs/: mkdocs.yml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_2afce437fb617e57_contracts_py.html  z_2afce437fb617e57_controllers_py.html  z_2afce437fb617e57_failure_classifier_py.html  z_2afce437fb617e57_intelligence_py.html  z_2afce437fb617e57_metrics_py.html  z_2afce437fb617e57_models_py.html  z_2afce437fb617e57_output_fallback_py.html  z_2afce437fb617e57_pricing_py.html  z_2afce437fb617e57_repair_py.html  z_2afce437fb617e57_repository_py.html  z_2afce437fb617e57_routing_py.html  z_2afce437fb617e57_sanitization_py.html  z_2afce437fb617e57_services_py.html  z_2afce437fb617e57_smoke_py.html  z_2afce437fb617e57_usage_py.html  z_2afce437fb617e57_validator_py.html  z_2afce437fb617e57_workdir_py.html  z_2afce437fb617e57_worker_py.html  z_32260d0561874a55_base_py.html  z_32260d0561874a55_benchmark_agent_py.html  z_32260d0561874a55_cli_backend_py.html  z_32260d0561874a55_echo_agent_py.html  z_4a8e454cc131eb75_dedup_service_py.html  z_4a8e454cc131eb75_fetch_service_py.html  z_4a8e454cc131eb75_normalize_service_py.html  z_5175fe3595a3bac5_contracts_py.html  (+108 more)
(+60212 files in other folders)
