[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "news-recap"
dynamic = [ "version",]
description = ""
keywords = [ "one", "two", ]
classifiers = [ "Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent",]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.0",
    "click>=8.2.0",
    "defusedxml>=0.7.1",
    "httpx>=0.28.0",
    "rich-click>=1.8.8",
    "sentence-transformers>=3.0.1",
    "sqlmodel>=0.0.22",
    "trafilatura>=2.0.0",
    "youtube-transcript-api>=1.0.0",
]
[[project.authors]]
name = "Andrey Sorokin"
email = "andrey@sorokin.engineer"

[project.license]
file = "LICENSE.txt"

[project.urls]
Homepage = "https://andgineer.github.io/news-recap/"
Documentation = "https://andgineer.github.io/news-recap/"

[tool.setuptools]
packages = "find:"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.manifest]
include = [ "README.md", "LICENSE.txt",]

[tool.ruff]
line-length = 99

[tool.hatch.version]
path = "src/news_recap/__about__.py"

[tool.uv]
dev-dependencies = [
    "allure-pytest>=2.14.2",
    "invoke>=2.2.0",
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-material>=9.6.13",
    "mkdocstrings[python]>=0.29.1",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pymdown-extensions>=10.15",
    "pyrefly>=0.50.0",
    "pytest-cov>=6.1.1",
    "pytest>=8.3.5",
]

[project.scripts]
news-recap = "news_recap.main:news_recap"
